Fix dropdown z-index bug
The bug was visible when opening the dropdown of a textItem that had
just been moved to a new category.
The dropdown would appear below other textItems.

--- a/src/components/commons/DropdownSelect.scss
+++ b/src/components/commons/DropdownSelect.scss
@@ -11,7 +11,7 @@
   width: 100%;
   background: #ffffff;
   overflow-y: auto;
-  z-index: 1;
+  z-index: 2;
 
   color: styles.$text-color;
   filter: drop-shadow(0 0 0.75em styles.$border-color-neutral);
